examples/test/testpolicy14884.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14884
  namespace: namespace405
spec:
  podSelector:
    matchLabels:
      key24: value10
      key18: value44
      key38: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value26
      podSelector:
        matchLabels:
          key12: value29
